--- a/metadata.yaml
+++ b/metadata.yaml
@@ -10,6 +10,9 @@ contributor:
     gutenberg_agent_id: '52302'
     url: http://www.gutenberg.org/2009/agents/52302
     wikipedia: https://fi.wikipedia.org/wiki/Pekka_Brofeldt
+covers:
+- cover_type: generated
+  image_path: cover.png
 creator:
   author:
     agent_name: Kingsley, Charles
@@ -22,6 +25,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/344
     wikipedia: https://en.wikipedia.org/wiki/Charles_Kingsley
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/72487#Syvyydesta-b-Sanoja-murheellisille
 gutenberg_issued: '2023-12-23'
 gutenberg_type: Text
 identifiers:
